# ws08_dbt_eng_dados

./: .gitignore  .user.yml  README.md  dbt_project.yml  import_tables.py  profiles.yml  pyproject.toml
owsbanco/models/silver/: account_customer.sql  d_time.sql  financial_movements.sql  location.sql  shema.yml  src_bronze.yml  trasnfer_in_out.sql
tables/: accounts.csv  city.csv  country.csv  customers.csv  d_month.csv  d_week.csv  d_weekday.csv  d_year.csv  state.csv
